syntax = "proto3";

message RegistrationRequest{
    int32 requestId = 1;
    string login = 2;
    bytes fingerprint = 3;

}