syntax = "proto3";
import "Fingerprint.proto";
package OpenFinger;

// message specifying preprocessing OpenFinger request
message PreprocessingRequest {
	Fingerprint fingerprint = 1;
}
